--- a/index.html
+++ b/index.html
@@ -11,10 +11,8 @@
 
 <body>
     <header>
-        <div class="title">
-            <h1>bikcraft</h1>
-        </div>
-
+        <img src="./img/bikcraft.svg" alt="">
+        
         <div class="nav">
             <div class="nav-menu">
                 <a href="#">SOBRE</a>
@@ -42,6 +40,9 @@
                 VER MAIS
             </button>
         </div>
+
+        <div class="borda-red"></div>
+
         <div class="bike-image">
             <img class="image" src="./img/bicicleta.jpg" alt="">
         </div>
