--- a/index.html
+++ b/index.html
@@ -11,73 +11,70 @@
 
 <body>
     <header>
-        <img src="./img/bikcraft.svg" alt="">
+        <img class="logo"src="./img/bikcraft.svg" alt="">
         
-        <div class="nav">
-            <div class="nav-menu">
-                <a href="#">SOBRE</a>
-            </div>
-            <div class="nav-menu">
-                <a href="#">PRODUTOS</a>
-            </div>
-            <div class="nav-menu">
-                <a href="#">LOJAS</a>
-            </div>
-            <div class="nav-menu">
-                <a href="#">CONTATO</a>
-            </div>
-        </div>
+        <nav aria-label="primaria">
+            <ul class="menu">
+                <li><a class="menu-item" href="#">SOBRE</a></li>
+                <li><a class="menu-item" href="#">PRODUTOS</a></li>
+                <li><a class="menu-item"href="#">LOJAS</a></li>
+                <li><a class="menu-item"href="#">CONTATO</a></li>
+            </ul>
+         </nav>
     </header>
 
     <main>
-        <div class="info-1">
-            <h2>Bicicletas Feitas a Mão</h2>
-            <p>A Nimbus Stark é a melhor Bikcraft já criada
-                pela nossa equipe. Ela vem equipada com os
-                melhores acessórios da marca.
-            </p>
-            <button>
-                VER MAIS
-            </button>
-        </div>
-
-        <div class="borda-red"></div>
-
-        <div class="bike-image">
-            <img class="image" src="./img/bicicleta.jpg" alt="">
-        </div>
-
-        <div class="vantagens">
-            <h3>
-                VANTAGENS BIKCRAFT
-            </h3>
-        </div>
-
-        <div class="info-2">
-            <div class="info-item">
-                <img src="/img/eletrica.svg" alt="">
-                <h2>Motor Elétrico</h2>
-                <p>Permite você viajar distâncias inimaginaveis
-                    com sua bike.
+        <article>
+            <div class="info-1">
+                <h2>Bicicletas Feitas a Mão</h2>
+                <p>A Nimbus Stark é a melhor Bikcraft já criada
+                    pela nossa equipe. Ela vem equipada com os
+                    melhores acessórios da marca.
                 </p>
+                <button>
+                    VER MAIS
+                </button>
             </div>
 
-            <div class="info-item">
-                <img src="/img/velocidade.svg" alt="">
-                <h2>40 km/h</h2>
-                <p>A mais rápida bicicleta elétrica
-                    disponível hoje no mercado.
-                </p>
+            <div class="bike-image">
+                <img class="image" src="./img/bicicleta.jpg" alt="">
+            </div>
+        </article>
+
+        <article>
+            <div class="vantagens">
+                <h3>
+                    VANTAGENS BIKCRAFT
+                </h3>
             </div>
 
-            <div class="info-item">
-                <img src="/img/rastreador.svg" alt="">
-                <h2>Rastreador</h2>
-                <p>Rastreador e sistema anti-furto para garantir
-                    o seu sossego.
-                </p>
+            <div class="info-2">
+                <div class="info-item">
+                    <img src="/img/eletrica.svg" alt="">
+                    <h2>Motor Elétrico</h2>
+                    <p>Permite você viajar distâncias inimaginaveis
+                        com sua bike.
+                    </p>
+                </div>
+
+                <div class="info-item">
+                    <img src="/img/velocidade.svg" alt="">
+                    <h2>40 km/h</h2>
+                    <p>A mais rápida bicicleta elétrica
+                        disponível hoje no mercado.
+                    </p>
+                </div>
+
+                <div class="info-item">
+                    <img src="/img/rastreador.svg" alt="">
+                    <h2>Rastreador</h2>
+                    <p>Rastreador e sistema anti-furto para garantir
+                        o seu sossego.
+                    </p>
+                </div>
             </div>
-        </div>
+        </article>
+        
     </main>
     <footer>
         <p>Bikcraft. Alguns Direitos Reservados.</p>
