--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
 
 <body>
     <header>
-        <img class="logo"src="./img/bikcraft.svg" alt="">
-        
+        <img class="logo" src="./img/bikcraft.svg" alt="">
+
         <nav aria-label="primaria">
             <ul class="menu">
                 <li><a class="menu-item" href="#">SOBRE</a></li>
                 <li><a class="menu-item" href="#">PRODUTOS</a></li>
-                <li><a class="menu-item"href="#">LOJAS</a></li>
-                <li><a class="menu-item"href="#">CONTATO</a></li>
+                <li><a class="menu-item" href="#">LOJAS</a></li>
+                <li><a class="menu-item" href="#">CONTATO</a></li>
             </ul>
-         </nav>
+        </nav>
     </header>
 
     <main>
-        <article>
+        <article class="conteudo">
             <div class="info-1">
                 <h2>Bicicletas Feitas a Mão</h2>
                 <p>A Nimbus Stark é a melhor Bikcraft já criada
@@ -41,40 +41,39 @@
             </div>
         </article>
 
-        <article>
+        <article class="conteudo">
             <div class="vantagens">
                 <h3>
                     VANTAGENS BIKCRAFT
                 </h3>
             </div>
 
-            <div class="info-2">
-                <div class="info-item">
+            <ul class="info-2">
+                <li class="info-item">
                     <img src="/img/eletrica.svg" alt="">
                     <h2>Motor Elétrico</h2>
                     <p>Permite você viajar distâncias inimaginaveis
                         com sua bike.
                     </p>
-                </div>
+                </li>
 
-                <div class="info-item">
+                <li class="info-item">
                     <img src="/img/velocidade.svg" alt="">
                     <h2>40 km/h</h2>
                     <p>A mais rápida bicicleta elétrica
                         disponível hoje no mercado.
                     </p>
-                </div>
+                </li>
 
-                <div class="info-item">
+                <li class="info-item">
                     <img src="/img/rastreador.svg" alt="">
                     <h2>Rastreador</h2>
                     <p>Rastreador e sistema anti-furto para garantir
                         o seu sossego.
                     </p>
-                </div>
-            </div>
+                </li>
+            </ul>
         </article>
-        
     </main>
     <footer>
         <p>Bikcraft. Alguns Direitos Reservados.</p>
