--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <img class="logo" src="./img/bikcraft.svg" alt="">
 
-        <nav aria-label="primaria">
+        <nav>
             <ul class="menu">
                 <li><a class="menu-item" href="#">SOBRE</a></li>
                 <li><a class="menu-item" href="#">PRODUTOS</a></li>
